--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,15 @@ dependencies = [
     "mysql-connector-python>=9.5.0",
     "parameterized>=0.9.0",
     "pycodestyle>=2.14.0",
+    "pydoclint>=0.8.1",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "ruff>=0.14.5",
 ]
+[tool.pydoclint]
+style = "google"
+require-return-section-when-returning-nothing = false
+arg-type-hints-in-signature = true
+arg-type-hints-in-docstring = false
+check-return-types = false
+check-class-attributes = false
