--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,23 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiosqlite>=0.21.0",
+    "django>=5.2.8",
+    "django-cors-headers>=4.9.0",
+    "django-environ>=0.12.0",
+    "django-mysql>=4.19.0",
+    "djangorestframework>=3.16.1",
+    "drf-yasg>=1.21.11",
+    "gunicorn>=23.0.0",
     "mysql-connector-python>=9.5.0",
+    "mysqlclient>=2.2.7",
     "parameterized>=0.9.0",
     "pycodestyle>=2.14.0",
     "pydoclint>=0.8.1",
     "python-dotenv>=1.2.1",
+    "rabbitmq>=0.2.0",
     "requests>=2.32.5",
     "ruff>=0.14.5",
+    "sqlparse>=0.5.3",
 ]
 [tool.pydoclint]
 style = "google"
