--- a/messaging_app/.gitignore
+++ b/messaging_app/.gitignore
@@ -143,6 +143,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.env.local
 
 # Spyder project settings
 .spyderproject
@@ -210,3 +211,4 @@ __marimo__/
 *.db
 
 .vscode
+cmd.txt
