--- a/messaging_app/pyproject.toml
+++ b/messaging_app/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "django-environ>=0.12.0",
     "django-mysql>=4.19.0",
     "djangorestframework>=3.16.1",
-    "drf-yasg>=1.21.11",
+    "drf-spectacular>=0.29.0",
+    "drf-spectacular-sidecar>=2025.10.1",
     "gunicorn>=23.0.0",
     "mysqlclient>=2.2.7",
     "rabbitmq>=0.2.0",
