--- a/messaging_app/pyproject.toml
+++ b/messaging_app/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "django-environ>=0.12.0",
     "django-mysql>=4.19.0",
     "djangorestframework>=3.16.1",
+    "drf-nested-routers>=0.95.0",
     "drf-spectacular>=0.29.0",
     "drf-spectacular-sidecar>=2025.10.1",
     "gunicorn>=23.0.0",
