--- a/messaging_app/pyproject.toml
+++ b/messaging_app/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "django>=5.2.8",
     "django-cors-headers>=4.9.0",
     "django-environ>=0.12.0",
+    "django-filter>=25.2",
     "django-mysql>=4.19.0",
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
