feat(middleware): Logging User Requests (Basic Middleware)
Mandatory task implementation:
- Created `chats/middleware.py` with `RequestLoggingMiddleware` class
  - Added `__init__` and `__call__` methods
  - In `__call__`, log each request with timestamp, user, and path:
    f"{datetime.now()} - User: {user} - Path: {request.path}"
- Configured `settings.py` to include the new middleware
- Ensured logs are written to `requests.log` at project root

Objective:
Provide a basic middleware that records user activity for auditing and debugging,
capturing essential request metadata in a consistent format.

Testing:
- Verified middleware integration by running `python manage.py runserver`
- Confirmed entries are appended to `requests.log` on each request

Repo: alx-backend-python
Directory: Django-Middleware-0x03
Files: chats/middleware.py, requests.log

--- a/Django-Middleware-0x03/docker-compose.yaml
+++ b/Django-Middleware-0x03/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
     volumes:
       - am_db_data:/var/lib/mysql
       - ./my.cnf:/etc/mysql/conf.d/my.cnf:ro
+      - ./docker/mysql/init:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1"]
       interval: 10s
@@ -47,6 +48,7 @@ services:
       - .env
     volumes:
       - ./messaging_app:/app/messaging_app
+      - ./chats:/app/chats
       - ./manage.py:/app/manage.py
       - am_static_volume:/usr/src/app/staticfiles
       - am_media_volume:/usr/src/app/mediafiles
