--- a/Django-Middleware-0x03/pyproject.toml
+++ b/Django-Middleware-0x03/pyproject.toml
@@ -17,6 +17,9 @@ dependencies = [
     "drf-spectacular-sidecar>=2025.10.1",
     "gunicorn>=23.0.0",
     "mysqlclient>=2.2.7",
+    "pytest>=9.0.1",
+    "pytest-cov>=7.0.0",
+    "pytest-django>=4.11.1",
     "rabbitmq>=0.2.0",
     "ruff>=0.14.5",
     "sqlparse>=0.5.3",
