feat(signals): log message edits with pre_save signal
- Added 'edited' field to Message model
- Created MessageHistory model to store old content
- Implemented pre_save signal to log edits before saving
- Registered models in admin for easy inspection
- Added unit tests to verify edit logging

Files updated:
- messaging/models.py
- messaging/signals.py
- messaging/apps.py
- messaging/admin.py
- messaging/tests.py

--- a/Django-signals_orm-0x04/docker-compose.tests.yaml
+++ b/Django-signals_orm-0x04/docker-compose.tests.yaml
@@ -5,7 +5,11 @@ services:
       dockerfile: Dockerfile
     container_name: alxsignals-test
     # command: pytest
-    command: python manage.py test messaging.tests.NotificationSignalTest
+    command: >
+      sh -c "python manage.py makemigrations messaging --noinput &&
+             python manage.py test messaging.tests.NotificationSignalTest -v 2 &&
+             python manage.py test messaging.tests.MessageEditSignalTest -v 2 
+      "
     env_file:
       - .env.test   # separate env file for test credentials
     environment:
