test(signals): verify cleanup of user-related data on account deletion
- Added DeleteUserSignalTest in messaging/tests.py
- Simulates account deletion via delete_user view
- Confirms removal of user, messages, notifications, and histories

--- a/Django-signals_orm-0x04/docker-compose.tests.yaml
+++ b/Django-signals_orm-0x04/docker-compose.tests.yaml
@@ -8,7 +8,8 @@ services:
     command: >
       sh -c "python manage.py makemigrations messaging --noinput &&
              python manage.py test messaging.tests.NotificationSignalTest -v 2 &&
-             python manage.py test messaging.tests.MessageEditSignalTest -v 2 
+             python manage.py test messaging.tests.MessageEditSignalTest -v 2 &&
+             python manage.py test messaging.tests.DeleteUserSignalTest -v 2 
       "
     env_file:
       - .env.test   # separate env file for test credentials
