--- a/messaging_app/docker-compose.yml
+++ b/messaging_app/docker-compose.yml
@@ -12,14 +12,14 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - db_data:/var/lib/mysql
+      - db_data:/var/lib/mysql   # Persist MySQL data
 
   web:
     build: .
     container_name: messaging_web
     restart: always
     env_file: .env
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
