--- a/messaging_app/messaging_app/blue_deployment.yaml
+++ b/messaging_app/messaging_app/blue_deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: messaging-app
-          image: messaging_app:1.0.0   # stable image
+          image: messaging_app:2.0   # updated image version
           ports:
             - containerPort: 8000
           env:
