fix: add pytest dev pendency and command in jenkinsfile

--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
             steps {
                 sh '''
                 docker run --rm -v $PWD:/app messaging_app:latest \
-                    pytest messaging_app --junitxml=reports/test-results.xml
+                    uv run pytest messaging_app --junitxml=reports/test-results.xml
                 '''
             }
         }
