ci(docker): add Dockerfile.test for Jenkins CI with dev dependencies
- Introduced Dockerfile.test extending production image
- Installs dev/test dependencies via uv sync --all-extras
- Provides pytest binary for running unit tests in CI
- Keeps production Dockerfile lean and runtime-focused
- Enables Jenkins pipeline to generate JUnit XML reports reproducibly

--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
             }
         }
 
-        stage('Build Docker Image') {
+        stage('Build Production Docker Image') {
             steps {
                 sh '''
                 docker build -t messaging_app:latest -f messaging_app/Dockerfile messaging_app
@@ -28,10 +28,18 @@ pipeline {
             }
         }
 
+        stage('Build Docker image for testing') {
+            steps {
+                sh '''
+                docker build -t messaging_app:test -f messaging_app/Dockerfile.test messaging_app
+                '''
+            }
+        }
+
         stage('Run Tests in Container') {
             steps {
                 sh '''
-                docker run --rm -v $PWD:/app messaging_app:latest \
+                docker run --rm -v $PWD:/app messaging_app:test \
                     uv run pytest messaging_app --junitxml=reports/test-results.xml
                 '''
             }
