ci(docker): fix Dockerfile.test to install dev dependency group
- Updated test stage to use `uv sync --locked --group dev` instead of --all-extras
- Ensures pytest>=9.0.2 from [dependency-groups] dev is installed into .venv
- Added PATH export so .venv/bin executables are discoverable
- Allows Jenkins to run pytest successfully and generate JUnit XML reports
- Keeps production image lean while enabling reproducible CI test runs

--- a/messaging_app/Dockerfile.test
+++ b/messaging_app/Dockerfile.test
@@ -6,7 +6,7 @@ FROM messaging_app:latest AS test
 COPY pyproject.toml uv.lock /app/
 
 # Install dev dependencies (including pytest)
-RUN uv sync --locked --all-extras
+RUN uv sync --locked --group dev
 
 # Ensure executables in .venv/bin are available
 ENV PATH="/app/.venv/bin:$PATH"
