ci(docker): optimize test stage with uv cache mount
- Added --mount=type=cache,target=/root/.cache/uv to uv sync
- Ensures pytest and other dev tools from [dependency-groups] dev are installed reproducibly
- Speeds up repeated CI builds by reusing cached wheels
- Keeps production image slim while enabling fast, reliable test runs

--- a/messaging_app/Dockerfile.test
+++ b/messaging_app/Dockerfile.test
@@ -5,11 +5,12 @@ FROM messaging_app:latest AS test
 # Copy dependency manifests
 COPY pyproject.toml uv.lock /app/
 
-# Install dev dependencies (including pytest)
-RUN uv sync --locked --group dev
+# Install dev dependencies (including pytest) with cache mount
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync --locked --group dev
 
 # Ensure executables in .venv/bin are available
 ENV PATH="/app/.venv/bin:$PATH"
 
 # Default command runs pytest with JUnit XML report
-CMD ["uv", "run", "python", "-m", "pytest", "messaging_app", "--junitxml=reports/test-results.xml"]
+CMD ["uv", "run", "pytest", "messaging_app", "--junitxml=reports/test-results.xml"]
