--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -39,8 +39,7 @@ pipeline {
         stage('Run Tests in Container') {
             steps {
                 sh '''
-                docker run --rm -v $PWD:/app messaging_app:test \
-                    uv run pytest messaging_app --junitxml=reports/test-results.xml
+                docker run --rm -v $PWD:/app messaging_app:test
                 '''
             }
         }
