--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -39,7 +39,7 @@ pipeline {
         stage('Run Tests in Container') {
             steps {
                 sh '''
-                docker run --rm -v $PWD:/app messaging_app:test
+                docker run --rm messaging_app:test
                 '''
             }
         }
