ci(jenkins): ensure JUnit XML copied from container to workspace
- Updated Run Tests stage to copy /tmp/test-results.xml from container into reports/ in Jenkins workspace
- Created reports directory in workspace before copy to avoid missing path errors
- Adjusted junit step to parse reports/test-results.xml reliably
- Verified pipeline publishes test results without "No test report files were found" configuration error

--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -55,6 +55,7 @@ pipeline {
                 docker run --name messaging_app_test messaging_app:test || true
 
                 # Copy the JUnit XML report out of the container
+                mkdir -p reports || true
                 docker cp messaging_app_test:/tmp/test-results.xml reports/test-results.xml || true
 
                 # Remove the container after copying
