--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -1,5 +1,10 @@
 pipeline {
     agent any
+
+    environment {
+        DOCKERHUB_CREDENTIALS = credentials('dockerhub-credentials-id') // Jenkins credential ID
+        DOCKER_IMAGE = "gabcares/messaging_app"
+    }
     
     stages {
         stage('Checkout') {
@@ -23,9 +28,19 @@ pipeline {
         stage('Build Production Docker Image') {
             steps {
                 sh '''
-                docker build -t messaging_app:latest -f messaging_app/Dockerfile messaging_app
+                docker build -t $DOCKER_IMAGE:latest -f messaging_app/Dockerfile messaging_app
                 '''
             }
+        }
+
+        stage('Push Production Docker Image') { 
+            steps { 
+                sh '''
+                mkdir -p /tmp/docker-config
+                echo $DOCKERHUB_CREDENTIALS_PSW | docker --config /tmp/docker-config login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin
+                docker --config /tmp/docker-config push $DOCKER_IMAGE:latest
+                ''' 
+            } 
         }
 
         // Legacy compliance stage: install via pip3 for checker
@@ -43,7 +58,7 @@ pipeline {
         stage('Build Docker image for testing') {
             steps {
                 sh '''
-                docker build -t messaging_app:test -f messaging_app/Dockerfile.test messaging_app
+                docker build -t $DOCKER_IMAGE:test -f $DOCKER_IMAGE/Dockerfile.test messaging_app
                 '''
             }
         }
@@ -52,14 +67,14 @@ pipeline {
             steps {
                 sh '''
                 # Run the test container with a fixed name
-                docker run --name messaging_app_test messaging_app:test || true
+                docker run --name $DOCKER_IMAGE_test $DOCKER_IMAGE:test || true
 
                 # Copy the JUnit XML report out of the container
                 mkdir -p reports || true
-                docker cp messaging_app_test:/tmp/test-results.xml reports/test-results.xml || true
+                docker cp $DOCKER_IMAGE_test:/tmp/test-results.xml reports/test-results.xml || true
 
                 # Remove the container after copying
-                docker rm -f messaging_app_test || true
+                docker rm -f $DOCKER_IMAGE_test || true
                 '''
             }
         }
