--- a/.github/workflows/entrypoint.yml
+++ b/.github/workflows/entrypoint.yml
@@ -8,4 +8,4 @@ on:
 
 jobs:
   messaging-app-ci:
-    uses: ./messaging_app/messaging_app/.github/workflows/ci.yml
+    uses: ./.github/workflows/messaging_app/messaging_app/ci.yml@<commit-sha>
