ci(workflows): simplify path handling with working-directory defaults
- Set defaults.run.working-directory to messaging_app/messaging_app in entrypoint.yml
- Removed repeated long paths for docker-compose.yml and env file references
- Ensures all run steps execute from messaging_app/messaging_app by default
- Verified CI workflow builds web service from Dockerfile and runs pytest with artifact upload
- Keeps .env.ci in .github/workflows as source, copied into messaging_app/messaging_app/.env during CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,13 +10,16 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: messaging_app/messaging_app
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Use CI env file
-        run: cp messaging_app/.env.ci messaging_app/.env
+        run: cp ../../.github/workflows/.env.ci .env
 
       - name: Set up Docker Compose
         run: |
