fix: rename to .yaml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,12 +31,12 @@ jobs:
           done
       
       - name: Build web service
-        run: docker compose -f docker-compose.yml build web
+        run: docker compose -f docker-compose.yaml build web
 
       - name: Run tests inside web service
         run: |
           # Override the web service command to run pytest instead of Gunicorn
-          docker compose -f docker-compose.yml run --rm web pytest --ds=messaging_app.settings --junitxml=reports/test-results.xml
+          docker compose -f docker-compose.yaml run --rm web pytest --ds=messaging_app.settings --junitxml=reports/test-results.xml
 
       - name: Tear down
         if: always()
