--- a/messaging_app/pyproject.toml
+++ b/messaging_app/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "drf-spectacular-sidecar>=2025.10.1",
     "gunicorn>=23.0.0",
     "mysqlclient>=2.2.7",
+    "pytest-django>=4.11.1",
     "rabbitmq>=0.2.0",
     "ruff>=0.14.5",
     "sqlparse>=0.5.3",
@@ -26,3 +27,6 @@ dependencies = [
 dev = [
     "pytest>=9.0.2",
 ]
+
+[pytest]
+DJANGO_SETTINGS_MODULE = messaging_app.settings
