fix(pytest-django): quote DJANGO_SETTINGS_MODULE in pyproject.toml
Corrected TOML syntax by wrapping `messaging_app.settings` in quotes.
This resolves uv sync parse errors and ensures pytest-django can
properly load the Django settings module during test runs.

--- a/messaging_app/pyproject.toml
+++ b/messaging_app/pyproject.toml
@@ -28,5 +28,6 @@ dev = [
     "pytest>=9.0.2",
 ]
 
-[pytest]
-DJANGO_SETTINGS_MODULE = messaging_app.settings
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "messaging_app.settings"
+
