ci(workflow): add Ruff lint job alongside Django tests
- Introduced a dedicated `lint` job using Ruff in Docker for faster, parallel linting.
- Configured workflow to mount repo and run `ruff check` against messaging_app.
- Ensured `ruff.toml` enforces Python 3.12 target, single quotes, and Django‑friendly rules.
- Kept test job isolated for Docker‑based pytest + coverage execution.
- CI now fails early on lint errors and uploads coverage reports as artifacts.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,20 @@ on:
   workflow_call:   # makes this workflow reusable
 
 jobs:
+  lint:
+    name: Ruff Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Run Ruff lint
+        run: |
+          docker run --rm -v ${{ github.workspace }}:/apps ghcr.io/astral-sh/ruff:latest \
+            ruff check /apps/messaging_app  
+
   test:
+    name: Django Tests
     runs-on: ubuntu-latest
     defaults:
       run:
