--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Run Ruff lint
         run: |
           docker run --rm -v ${{ github.workspace }}:/apps ghcr.io/astral-sh/ruff:latest \
-            ruff check /apps/messaging_app  
+            check /apps/messaging_app  
 
   test:
     name: Django Tests
